<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<resources>

    <string name="app_name">Community Animator</string>
    <string name="action_websearch">Search</string>
    <string name="facebook_app_id">991607557523053</string>
    <string name="maps_app_key">AIzaSyD9wpmCtUti0W64UlpKmAmQMmiYSHYSPC4</string>

    <!-- Content Description -->
    <string name="content_desc">Content Description</string>

    <!-- Login/Account creation screen -->
    <string name="signIn">Sign In</string>
    <string name="submit">Submit</string>
    <string name="orText">Or</string>
    <string name="createAccount">Create Account</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="menu_settings">Settings</string>
    <string name="remember">Remember me</string>
    <string name="forgot"><u>Forgot details?</u></string>
    <string name="facebook">Connect with Facebook</string>
    <string name="twitter">Connect with Twitter</string>
    <string name="signUpQuestion">Don´t have an account?</string>
    <string name="signUp">Sign Up</string>
    <string name="social">Sign in with Social Media</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="menu_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in</string>
    <string name="login_progress_password_email">Sending email</string>
    <string name="error_invalid_email">This email address is invalid.</string>
    <string name="error_duplicate_email">This email address is already in use.</string>
    <string name="error_duplicate_username">This username is already in use.</string>
    <string name="error_incorrect_password">This password is incorrect.</string>
    <string name="error_invalid_password">This password must be at least 5 characters long.</string>
    <string name="error_interest_required">Please, select the conversation topic.</string>
    <string name="error_task_required">Please, select a task area.</string>
    <string name="error_field_required">This field is required.</string>
    <string name="session_invalid_error">Your current session is no longer valid. Please log in again.</string>
    <string name="logn_generic_error">Something went wrong.</string>

    <!-- Strings related forget password -->
    <string name="askEmail">Enter Your Email Address:</string>
    <string name="emailHint">(Use the same registered email)</string>

    <!-- Strings related to menu -->
    <string name="profile">Profile</string>
    <string name="view">View</string>
    <string name="status">Status</string>
    <string name="chat">Chat</string>
    <string name="animated">animated</string>
    <string name="distance">Distance</string>
    <string name="number">50 feet away</string>
    <string name="locate">Locate</string>
    <string name="settings">Settings</string>

    <!-- Strings related view dialog -->
    <string name="listView">List View</string>
    <string name="mapView">Map View</string>
    <string name="save">Save Changes</string>

    <!-- Strings related status dialog -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>

    <!-- Strings related locate dialog -->
    <string name="locateUser">Type your friend´s name:</string>
    <!-- Strings related map -->
    <string name="post_out_of_range">This person is either too far away or not animated.</string>

    <!-- Strings related to user profile -->
    <string name="upload_image">Upload Image</string>
    <string name="userName"> Name</string>
    <string name="DOB"> Date of Birth</string>
    <string name="Occupation"> Occupation</string>
    <string name="email">Email</string>
    <string name="SaveAccount">Save Account</string>
    <string name="progress_signUp">Signing up...</string>
    <string name="no_items">No task items</string>
    <string name="interestAreas">Conversation Topics ></string>
    <string name="taskAreas">Task Areas ></string>
    <string name="gender">Gender</string>
    <string name="talkAbout">I am interested talk about:</string>
    <string name="taskList">Task Categories</string>

    <!-- Strings related Messaging -->
    <string name="message_elipses">Type message...</string>
    <string name="send">Send</string>

    <!-- Strings from Settings Summary -->
    <string name="wifi_only">On/Off</string>
    <string name="ringtone">Play sounds for incoming and outoing messages</string>
    <string name="vibrate">Vibrate device when new message arrives while application is running</string>
    <string name="show">Enable to also use hidden contacts</string>
    <string name="contactUs">Questions? Comments? Need Help?</string>

    <!-- Strings from Settings title -->
    <string name="wifiTitle">Wifi only</string>
    <string name="notificationsTitle">Notifications</string>
    <string name="tonesTitle">Conversations tones</string>
    <string name="ringtoneSound">Set Ringtone</string>
    <string name="ringtoneSilent">Silent</string>
    <string name="vibrateTitle">Vibrate</string>
    <string name="tellTitle">Tell a friend</string>
    <string name="contactsTitle">Show all contacts</string>
    <string name="helpTitle">Help</string>
    <string name="aboutTitle">About</string>
    <string name="termTitle">Terms of Service</string>
    <string name="faqTitle">FAQ</string>
    <string name="contactUsTitle">Contact Us</string>
    <string name="logOutTitle">Log Out</string>
    <string name="LogOutMessage">You´re no longer animated. Your location will not appear in the map.</string>
    <string name="askFriendEmail">Type your friend´s email:</string>

    <!-- Strings related to help settings -->
    <string name="aboutDialog">About Community Animator</string>
    <string name="about1">The Community Animation mobile application has been created to increase the num-ber of civic relationships in the local community.</string>
    <string name="about2">The application asks users to sign in, then create an acco-unt to select from a list of civic interests. Once an acco-unt is created, users geolo-cation on their smartphone allows Community Animation to connect and coordinate with users in 
close proximity with matching civic interests.</string>
    <string name="term1">Researchers at PSU have collaborated with the New Leaf Initiative to learn more about how community members will use this mobile app and how mobile technology would influences social interaction and engagement. By using this application, you 
        agree to share data from your experiences and uses of the app although you can opt out of this study at any time. Your information will be kept confidential in accordance with to HIPAA standards.</string>
    <string name="term2">Any data that is used in publications be aggregated with other users information and will not include any information that will personally identify you as a user. For further information on this study, please contact Dr. Jess Kropczynski 
        <i>(jessk@psu.edu)</i> or Dr. Jack Carroll <i>(jmcarroll@psu.edu)</i>.</string>

</resources>