<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_lateral_margin"
        android:paddingRight="@dimen/activity_lateral_margin"
        android:scrollbars="vertical" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo" />

        <RelativeLayout
            android:id="@+id/loginContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtusername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/usernameHint"
                android:textAppearance="?android:attr/textAppearance"
                android:textColor="@android:color/darker_gray" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtusername"
                android:background="@drawable/edittext_round_corners"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:id="@+id/txtpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/username"
                android:padding="5dp"
                android:text="@string/passwordHint"
                android:textAppearance="?android:attr/textAppearance"
                android:textColor="@android:color/darker_gray" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtpassword"
                android:background="@drawable/edittext_round_corners"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/signIn"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <LinearLayout
                android:id="@+id/rememberContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/password"
                android:layout_marginTop="5dp" >

                <CheckBox
                    android:id="@+id/remembercheck"
                    style="@style/CheckBoxAppTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true" />

                <TextView
                    android:id="@+id/txtremember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/darker_gray" />
            </LinearLayout>

            <TextView
                android:id="@+id/forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/rememberContent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/password"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:text="@string/forgot"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/blue" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_login"
            style="@style/ButtonAppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/signIn"
            android:textAppearance="?android:attr/textAppearance" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/txtsocial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/social"
            android:textAppearance="?android:attr/textAppearance"
            android:textColor="@android:color/darker_gray" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/com_facebook_button_background"
            android:drawableLeft="@drawable/com_facebook_button_icon"
            android:drawablePadding="@dimen/com_facebook_share_button_compound_drawable_padding"
            android:onClick="onLoginClick"
            android:paddingBottom="@dimen/com_facebook_share_button_padding_bottom"
            android:paddingLeft="@dimen/com_facebook_share_button_padding_left"
            android:paddingRight="@dimen/com_facebook_share_button_padding_right"
            android:paddingTop="@dimen/com_facebook_share_button_padding_top"
            android:text="@string/facebook"
            android:textColor="@color/com_facebook_share_button_text_color"
            android:textSize="@dimen/com_facebook_share_button_text_size" />

        <RelativeLayout
            android:id="@+id/twitterContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_twitter"
                style="@style/ButtonAppThemeLightBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="-7dp"
                android:layout_marginRight="-7dp"
                android:text="@string/twitter"
                android:textColor="@color/com_facebook_share_button_text_color"
              android:textSize="@dimen/com_facebook_share_button_text_size" />

            <ImageView
                android:id="@+id/twitterIco"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/twitter"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/twitter_test" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/signupContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/signUpquestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signUpQuestion"
                android:textAppearance="?android:attr/textAppearance"
                android:textColor="@android:color/darker_gray" />

            <Button
                android:id="@+id/btn_signup"
                style="@style/ButtonAppThemeGreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/signUpquestion"
                android:layout_gravity="center_horizontal"
                android:text="@string/signUp"
                android:textAppearance="?android:attr/textAppearance" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>